--- a/config.sample.json
+++ b/config.sample.json
@@ -6,7 +6,11 @@
     "host": "localhost",
     "port": 6379,
     "password": "password",
-    "vmPortMapName": "VM:Port",
-    "freePortListName": "FreePorts"
+    "expireSeconds": 2592000,
+    "keyPrefix": {
+      "availablePort": "AvailablePort",
+      "activeVmPort": "Active:VM:Port",
+      "savedVmPort": "Saved:VM:Port"
+    }
   }
 }
