--- a/package.json
+++ b/package.json
@@ -8,11 +8,12 @@
     "test": "jest"
   },
   "dependencies": {
+    "bluebird": "^3.5.2",
     "redis": "^2.8.0",
-    "winston": "^2.4.2"
+    "winston": "^3.1.0"
   },
   "devDependencies": {
-    "eslint": "^4.19.1",
-    "jest": "^22.4.3"
+    "eslint": "^5.8.0",
+    "jest": "^23.6.0"
   }
 }
